src/compilador/y.output
   0  $accept : programa $end

   1  programa : bloquePrograma
   2           | error

   3  bloquePrograma : bloquePrograma sentenciaDeclarativa
   4                 | bloquePrograma sentenciaEjecutable
   5                 | sentenciaDeclarativa
   6                 | sentenciaEjecutable

   7  sentenciaDeclarativa : tipo listaVariables ';'
   8                       | declaracionProcedimiento

   9  listaVariables : listaVariables ',' identificador
  10                 | identificador

  11  declaracionProcedimiento : encabezadoProc bloqueProc

  12  encabezadoProc :
  13                 | PROC identificador '(' ')' NA '=' CTE ',' NS '=' CTE
  14                 | PROC identificador '(' tipo identificador ')' NA '=' CTE ',' NS '=' CTE
  15                 | PROC identificador '(' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE
  16                 | PROC identificador '(' tipo identificador ',' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE
  17                 | PROC identificador '(' tipo identificador ',' tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE

  18  bloqueProc : '{' bloque '}'

  19  bloque : bloque sentenciaDeclarativa
  20         | bloque sentenciaEjecutable
  21         | sentenciaDeclarativa
  22         | sentenciaEjecutable
  23         | error

  24  sentenciaEjecutable : asignacion
  25                      | OUT '(' CADENA ')' ';'
  26                      | OUT '(' error ')' ';'
  27                      | identificador '(' ')' ';'
  28                      | identificador '(' identificador ')' ';'
  29                      | identificador '(' identificador ',' identificador ')' ';'
  30                      | identificador '(' identificador ',' identificador ',' identificador ')' ';'
  31                      | identificador '(' error ')' ';'
  32                      | IF cuerpoIf
  33                      | cicloFor

  34  cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia '}'

  35  condicionFor : inicioFor ';' condiFOR ';' incDec

  36  condiFOR : condicion

  37  inicioFor : identificador '=' constante

  38  condicion : identificador comparador asignacion
  39            | identificador comparador identificador
  40            | identificador comparador constante

  41  incDec : UP constante
  42         | DOWN constante
  43         | error constante

  44  bloqueSentencia : bloqueSentencia sentenciaEjecutable
  45                  | sentenciaEjecutable

  46  cuerpoIf : cuerpoCompleto END_IF
  47           | cuerpoIncompleto END_IF

  48  cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}'
  49                 | '(' condicionIf ')' senteciaUnicaThen ELSE '{' bloqueElse '}'
  50                 | '(' condicionIf ')' '{' bloqueThen '}' ELSE senteciaUnicaElse
  51                 | '(' condicionIf ')' senteciaUnicaThen ELSE senteciaUnicaElse

  52  senteciaUnicaThen : sentenciaEjecutable

  53  senteciaUnicaElse : sentenciaEjecutable

  54  condicionIf : condicion

  55  bloqueThen : bloqueSentencia

  56  bloqueElse : bloqueSentencia

  57  cuerpoIncompleto : '(' condicionIf ')' '{' bloqueThen '}'
  58                   | '(' condicionIf ')' senteciaUnicaThen

  59  asignacion : identificador '=' expresion ';'
  60             | error '=' expresion

  61  expresion : expresion '+' termino
  62            | expresion '-' termino
  63            | termino

  64  termino : termino '*' factor
  65          | termino '/' factor
  66          | factor

  67  factor : constante
  68         | identificador

  69  comparador : "<="
  70             | ">="
  71             | "!="
  72             | "=="
  73             | '>'
  74             | '<'
  75             | error

  76  tipo : FLOAT
  77       | INTEGER

  78  identificador : ID

  79  constante : ctePositiva
  80            | cteNegativa

  81  $$1 :

  82  ctePositiva : CTE $$1

  83  cteNegativa : '-' CTE

state 0
	$accept : . programa $end  (0)
	encabezadoProc : .  (12)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	'{'  reduce 12

	programa  goto 9
	bloquePrograma  goto 10
	sentenciaDeclarativa  goto 11
	sentenciaEjecutable  goto 12
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 1
	programa : error .  (2)
	asignacion : error . '=' expresion  (60)

	'='  shift 19
	$end  reduce 2


state 2
	identificador : ID .  (78)

	.  reduce 78


state 3
	sentenciaEjecutable : IF . cuerpoIf  (32)

	'('  shift 20
	.  error

	cuerpoIf  goto 21
	cuerpoCompleto  goto 22
	cuerpoIncompleto  goto 23


state 4
	sentenciaEjecutable : OUT . '(' CADENA ')' ';'  (25)
	sentenciaEjecutable : OUT . '(' error ')' ';'  (26)

	'('  shift 24
	.  error


state 5
	cicloFor : FOR . '(' condicionFor ')' '{' bloqueSentencia '}'  (34)

	'('  shift 25
	.  error


state 6
	tipo : INTEGER .  (77)

	.  reduce 77


state 7
	tipo : FLOAT .  (76)

	.  reduce 76


state 8
	encabezadoProc : PROC . identificador '(' ')' NA '=' CTE ',' NS '=' CTE  (13)
	encabezadoProc : PROC . identificador '(' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC . identificador '(' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (15)
	encabezadoProc : PROC . identificador '(' tipo identificador ',' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (16)
	encabezadoProc : PROC . identificador '(' tipo identificador ',' tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE  (17)

	ID  shift 2
	.  error

	identificador  goto 26


state 9
	$accept : programa . $end  (0)

	$end  accept


state 10
	programa : bloquePrograma .  (1)
	bloquePrograma : bloquePrograma . sentenciaDeclarativa  (3)
	bloquePrograma : bloquePrograma . sentenciaEjecutable  (4)
	encabezadoProc : .  (12)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	$end  reduce 1
	'{'  reduce 12

	sentenciaDeclarativa  goto 28
	sentenciaEjecutable  goto 29
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 11
	bloquePrograma : sentenciaDeclarativa .  (5)

	.  reduce 5


state 12
	bloquePrograma : sentenciaEjecutable .  (6)

	.  reduce 6


state 13
	sentenciaDeclarativa : tipo . listaVariables ';'  (7)

	ID  shift 2
	.  error

	listaVariables  goto 30
	identificador  goto 31


state 14
	sentenciaDeclarativa : declaracionProcedimiento .  (8)

	.  reduce 8


state 15
	sentenciaEjecutable : identificador . '(' ')' ';'  (27)
	sentenciaEjecutable : identificador . '(' identificador ')' ';'  (28)
	sentenciaEjecutable : identificador . '(' identificador ',' identificador ')' ';'  (29)
	sentenciaEjecutable : identificador . '(' identificador ',' identificador ',' identificador ')' ';'  (30)
	sentenciaEjecutable : identificador . '(' error ')' ';'  (31)
	asignacion : identificador . '=' expresion ';'  (59)

	'('  shift 32
	'='  shift 33
	.  error


state 16
	declaracionProcedimiento : encabezadoProc . bloqueProc  (11)

	'{'  shift 34
	.  error

	bloqueProc  goto 35


state 17
	sentenciaEjecutable : asignacion .  (24)

	.  reduce 24


state 18
	sentenciaEjecutable : cicloFor .  (33)

	.  reduce 33


state 19
	asignacion : error '=' . expresion  (60)

	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 38
	constante  goto 39
	expresion  goto 40
	termino  goto 41
	factor  goto 42
	ctePositiva  goto 43
	cteNegativa  goto 44


state 20
	cuerpoCompleto : '(' . condicionIf ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}'  (48)
	cuerpoCompleto : '(' . condicionIf ')' senteciaUnicaThen ELSE '{' bloqueElse '}'  (49)
	cuerpoCompleto : '(' . condicionIf ')' '{' bloqueThen '}' ELSE senteciaUnicaElse  (50)
	cuerpoCompleto : '(' . condicionIf ')' senteciaUnicaThen ELSE senteciaUnicaElse  (51)
	cuerpoIncompleto : '(' . condicionIf ')' '{' bloqueThen '}'  (57)
	cuerpoIncompleto : '(' . condicionIf ')' senteciaUnicaThen  (58)

	ID  shift 2
	.  error

	identificador  goto 45
	condicion  goto 46
	condicionIf  goto 47


state 21
	sentenciaEjecutable : IF cuerpoIf .  (32)

	.  reduce 32


state 22
	cuerpoIf : cuerpoCompleto . END_IF  (46)

	END_IF  shift 48
	.  error


state 23
	cuerpoIf : cuerpoIncompleto . END_IF  (47)

	END_IF  shift 49
	.  error


state 24
	sentenciaEjecutable : OUT '(' . CADENA ')' ';'  (25)
	sentenciaEjecutable : OUT '(' . error ')' ';'  (26)

	error  shift 50
	CADENA  shift 51
	.  error


state 25
	cicloFor : FOR '(' . condicionFor ')' '{' bloqueSentencia '}'  (34)

	ID  shift 2
	.  error

	identificador  goto 52
	condicionFor  goto 53
	inicioFor  goto 54


state 26
	encabezadoProc : PROC identificador . '(' ')' NA '=' CTE ',' NS '=' CTE  (13)
	encabezadoProc : PROC identificador . '(' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC identificador . '(' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (15)
	encabezadoProc : PROC identificador . '(' tipo identificador ',' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (16)
	encabezadoProc : PROC identificador . '(' tipo identificador ',' tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE  (17)

	'('  shift 55
	.  error


state 27
	asignacion : error . '=' expresion  (60)

	'='  shift 19
	.  error


state 28
	bloquePrograma : bloquePrograma sentenciaDeclarativa .  (3)

	.  reduce 3


state 29
	bloquePrograma : bloquePrograma sentenciaEjecutable .  (4)

	.  reduce 4


state 30
	sentenciaDeclarativa : tipo listaVariables . ';'  (7)
	listaVariables : listaVariables . ',' identificador  (9)

	';'  shift 56
	','  shift 57
	.  error


state 31
	listaVariables : identificador .  (10)

	.  reduce 10


state 32
	sentenciaEjecutable : identificador '(' . ')' ';'  (27)
	sentenciaEjecutable : identificador '(' . identificador ')' ';'  (28)
	sentenciaEjecutable : identificador '(' . identificador ',' identificador ')' ';'  (29)
	sentenciaEjecutable : identificador '(' . identificador ',' identificador ',' identificador ')' ';'  (30)
	sentenciaEjecutable : identificador '(' . error ')' ';'  (31)

	error  shift 58
	ID  shift 2
	')'  shift 59
	.  error

	identificador  goto 60


state 33
	asignacion : identificador '=' . expresion ';'  (59)

	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 38
	constante  goto 39
	expresion  goto 61
	termino  goto 41
	factor  goto 42
	ctePositiva  goto 43
	cteNegativa  goto 44


state 34
	bloqueProc : '{' . bloque '}'  (18)
	encabezadoProc : .  (12)

	error  shift 62
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	'{'  reduce 12

	sentenciaDeclarativa  goto 63
	sentenciaEjecutable  goto 64
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	bloque  goto 65
	asignacion  goto 17
	cicloFor  goto 18


state 35
	declaracionProcedimiento : encabezadoProc bloqueProc .  (11)

	.  reduce 11


state 36
	ctePositiva : CTE . $$1  (82)
	$$1 : .  (81)

	.  reduce 81

	$$1  goto 66


state 37
	cteNegativa : '-' . CTE  (83)

	CTE  shift 67
	.  error


state 38
	factor : identificador .  (68)

	.  reduce 68


state 39
	factor : constante .  (67)

	.  reduce 67


state 40
	asignacion : error '=' expresion .  (60)
	expresion : expresion . '+' termino  (61)
	expresion : expresion . '-' termino  (62)

	'+'  shift 68
	'-'  shift 69
	$end  reduce 60
	error  reduce 60
	ID  reduce 60
	IF  reduce 60
	ELSE  reduce 60
	END_IF  reduce 60
	OUT  reduce 60
	FOR  reduce 60
	INTEGER  reduce 60
	FLOAT  reduce 60
	PROC  reduce 60
	';'  reduce 60
	')'  reduce 60
	'{'  reduce 60
	'}'  reduce 60


state 41
	expresion : termino .  (63)
	termino : termino . '*' factor  (64)
	termino : termino . '/' factor  (65)

	'*'  shift 70
	'/'  shift 71
	$end  reduce 63
	error  reduce 63
	ID  reduce 63
	IF  reduce 63
	ELSE  reduce 63
	END_IF  reduce 63
	OUT  reduce 63
	FOR  reduce 63
	INTEGER  reduce 63
	FLOAT  reduce 63
	PROC  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	';'  reduce 63
	')'  reduce 63
	'{'  reduce 63
	'}'  reduce 63


state 42
	termino : factor .  (66)

	.  reduce 66


state 43
	constante : ctePositiva .  (79)

	.  reduce 79


state 44
	constante : cteNegativa .  (80)

	.  reduce 80


state 45
	condicion : identificador . comparador asignacion  (38)
	condicion : identificador . comparador identificador  (39)
	condicion : identificador . comparador constante  (40)

	error  shift 72
	"<="  shift 73
	">="  shift 74
	"!="  shift 75
	"=="  shift 76
	'>'  shift 77
	'<'  shift 78
	.  error

	comparador  goto 79


state 46
	condicionIf : condicion .  (54)

	.  reduce 54


state 47
	cuerpoCompleto : '(' condicionIf . ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}'  (48)
	cuerpoCompleto : '(' condicionIf . ')' senteciaUnicaThen ELSE '{' bloqueElse '}'  (49)
	cuerpoCompleto : '(' condicionIf . ')' '{' bloqueThen '}' ELSE senteciaUnicaElse  (50)
	cuerpoCompleto : '(' condicionIf . ')' senteciaUnicaThen ELSE senteciaUnicaElse  (51)
	cuerpoIncompleto : '(' condicionIf . ')' '{' bloqueThen '}'  (57)
	cuerpoIncompleto : '(' condicionIf . ')' senteciaUnicaThen  (58)

	')'  shift 80
	.  error


state 48
	cuerpoIf : cuerpoCompleto END_IF .  (46)

	.  reduce 46


state 49
	cuerpoIf : cuerpoIncompleto END_IF .  (47)

	.  reduce 47


state 50
	sentenciaEjecutable : OUT '(' error . ')' ';'  (26)

	')'  shift 81
	.  error


state 51
	sentenciaEjecutable : OUT '(' CADENA . ')' ';'  (25)

	')'  shift 82
	.  error


state 52
	inicioFor : identificador . '=' constante  (37)

	'='  shift 83
	.  error


state 53
	cicloFor : FOR '(' condicionFor . ')' '{' bloqueSentencia '}'  (34)

	')'  shift 84
	.  error


state 54
	condicionFor : inicioFor . ';' condiFOR ';' incDec  (35)

	';'  shift 85
	.  error


state 55
	encabezadoProc : PROC identificador '(' . ')' NA '=' CTE ',' NS '=' CTE  (13)
	encabezadoProc : PROC identificador '(' . tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC identificador '(' . tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (15)
	encabezadoProc : PROC identificador '(' . tipo identificador ',' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (16)
	encabezadoProc : PROC identificador '(' . tipo identificador ',' tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE  (17)

	INTEGER  shift 6
	FLOAT  shift 7
	')'  shift 86
	.  error

	tipo  goto 87


state 56
	sentenciaDeclarativa : tipo listaVariables ';' .  (7)

	.  reduce 7


state 57
	listaVariables : listaVariables ',' . identificador  (9)

	ID  shift 2
	.  error

	identificador  goto 88


state 58
	sentenciaEjecutable : identificador '(' error . ')' ';'  (31)

	')'  shift 89
	.  error


state 59
	sentenciaEjecutable : identificador '(' ')' . ';'  (27)

	';'  shift 90
	.  error


state 60
	sentenciaEjecutable : identificador '(' identificador . ')' ';'  (28)
	sentenciaEjecutable : identificador '(' identificador . ',' identificador ')' ';'  (29)
	sentenciaEjecutable : identificador '(' identificador . ',' identificador ',' identificador ')' ';'  (30)

	','  shift 91
	')'  shift 92
	.  error


state 61
	asignacion : identificador '=' expresion . ';'  (59)
	expresion : expresion . '+' termino  (61)
	expresion : expresion . '-' termino  (62)

	'+'  shift 68
	'-'  shift 69
	';'  shift 93
	.  error


state 62
	bloque : error .  (23)
	asignacion : error . '=' expresion  (60)

	'='  shift 19
	error  reduce 23
	ID  reduce 23
	IF  reduce 23
	OUT  reduce 23
	FOR  reduce 23
	INTEGER  reduce 23
	FLOAT  reduce 23
	PROC  reduce 23
	'{'  reduce 23
	'}'  reduce 23


state 63
	bloque : sentenciaDeclarativa .  (21)

	.  reduce 21


state 64
	bloque : sentenciaEjecutable .  (22)

	.  reduce 22


state 65
	bloqueProc : '{' bloque . '}'  (18)
	bloque : bloque . sentenciaDeclarativa  (19)
	bloque : bloque . sentenciaEjecutable  (20)
	encabezadoProc : .  (12)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	'}'  shift 94
	'{'  reduce 12

	sentenciaDeclarativa  goto 95
	sentenciaEjecutable  goto 96
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 66
	ctePositiva : CTE $$1 .  (82)

	.  reduce 82


state 67
	cteNegativa : '-' CTE .  (83)

	.  reduce 83


state 68
	expresion : expresion '+' . termino  (61)

	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 38
	constante  goto 39
	termino  goto 97
	factor  goto 42
	ctePositiva  goto 43
	cteNegativa  goto 44


state 69
	expresion : expresion '-' . termino  (62)

	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 38
	constante  goto 39
	termino  goto 98
	factor  goto 42
	ctePositiva  goto 43
	cteNegativa  goto 44


state 70
	termino : termino '*' . factor  (64)

	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 38
	constante  goto 39
	factor  goto 99
	ctePositiva  goto 43
	cteNegativa  goto 44


state 71
	termino : termino '/' . factor  (65)

	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 38
	constante  goto 39
	factor  goto 100
	ctePositiva  goto 43
	cteNegativa  goto 44


state 72
	comparador : error .  (75)

	.  reduce 75


state 73
	comparador : "<=" .  (69)

	.  reduce 69


state 74
	comparador : ">=" .  (70)

	.  reduce 70


state 75
	comparador : "!=" .  (71)

	.  reduce 71


state 76
	comparador : "==" .  (72)

	.  reduce 72


state 77
	comparador : '>' .  (73)

	.  reduce 73


state 78
	comparador : '<' .  (74)

	.  reduce 74


state 79
	condicion : identificador comparador . asignacion  (38)
	condicion : identificador comparador . identificador  (39)
	condicion : identificador comparador . constante  (40)

	error  shift 27
	ID  shift 2
	CTE  shift 36
	'-'  shift 37
	.  error

	identificador  goto 101
	asignacion  goto 102
	constante  goto 103
	ctePositiva  goto 43
	cteNegativa  goto 44


state 80
	cuerpoCompleto : '(' condicionIf ')' . '{' bloqueThen '}' ELSE '{' bloqueElse '}'  (48)
	cuerpoCompleto : '(' condicionIf ')' . senteciaUnicaThen ELSE '{' bloqueElse '}'  (49)
	cuerpoCompleto : '(' condicionIf ')' . '{' bloqueThen '}' ELSE senteciaUnicaElse  (50)
	cuerpoCompleto : '(' condicionIf ')' . senteciaUnicaThen ELSE senteciaUnicaElse  (51)
	cuerpoIncompleto : '(' condicionIf ')' . '{' bloqueThen '}'  (57)
	cuerpoIncompleto : '(' condicionIf ')' . senteciaUnicaThen  (58)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'{'  shift 104
	.  error

	sentenciaEjecutable  goto 105
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	senteciaUnicaThen  goto 106


state 81
	sentenciaEjecutable : OUT '(' error ')' . ';'  (26)

	';'  shift 107
	.  error


state 82
	sentenciaEjecutable : OUT '(' CADENA ')' . ';'  (25)

	';'  shift 108
	.  error


state 83
	inicioFor : identificador '=' . constante  (37)

	CTE  shift 36
	'-'  shift 37
	.  error

	constante  goto 109
	ctePositiva  goto 43
	cteNegativa  goto 44


state 84
	cicloFor : FOR '(' condicionFor ')' . '{' bloqueSentencia '}'  (34)

	'{'  shift 110
	.  error


state 85
	condicionFor : inicioFor ';' . condiFOR ';' incDec  (35)

	ID  shift 2
	.  error

	identificador  goto 45
	condiFOR  goto 111
	condicion  goto 112


state 86
	encabezadoProc : PROC identificador '(' ')' . NA '=' CTE ',' NS '=' CTE  (13)

	NA  shift 113
	.  error


state 87
	encabezadoProc : PROC identificador '(' tipo . identificador ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC identificador '(' tipo . identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (15)
	encabezadoProc : PROC identificador '(' tipo . identificador ',' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (16)
	encabezadoProc : PROC identificador '(' tipo . identificador ',' tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE  (17)

	ID  shift 2
	.  error

	identificador  goto 114


state 88
	listaVariables : listaVariables ',' identificador .  (9)

	.  reduce 9


state 89
	sentenciaEjecutable : identificador '(' error ')' . ';'  (31)

	';'  shift 115
	.  error


state 90
	sentenciaEjecutable : identificador '(' ')' ';' .  (27)

	.  reduce 27


state 91
	sentenciaEjecutable : identificador '(' identificador ',' . identificador ')' ';'  (29)
	sentenciaEjecutable : identificador '(' identificador ',' . identificador ',' identificador ')' ';'  (30)

	ID  shift 2
	.  error

	identificador  goto 116


state 92
	sentenciaEjecutable : identificador '(' identificador ')' . ';'  (28)

	';'  shift 117
	.  error


state 93
	asignacion : identificador '=' expresion ';' .  (59)

	.  reduce 59


state 94
	bloqueProc : '{' bloque '}' .  (18)

	.  reduce 18


state 95
	bloque : bloque sentenciaDeclarativa .  (19)

	.  reduce 19


state 96
	bloque : bloque sentenciaEjecutable .  (20)

	.  reduce 20


state 97
	expresion : expresion '+' termino .  (61)
	termino : termino . '*' factor  (64)
	termino : termino . '/' factor  (65)

	'*'  shift 70
	'/'  shift 71
	$end  reduce 61
	error  reduce 61
	ID  reduce 61
	IF  reduce 61
	ELSE  reduce 61
	END_IF  reduce 61
	OUT  reduce 61
	FOR  reduce 61
	INTEGER  reduce 61
	FLOAT  reduce 61
	PROC  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	';'  reduce 61
	')'  reduce 61
	'{'  reduce 61
	'}'  reduce 61


state 98
	expresion : expresion '-' termino .  (62)
	termino : termino . '*' factor  (64)
	termino : termino . '/' factor  (65)

	'*'  shift 70
	'/'  shift 71
	$end  reduce 62
	error  reduce 62
	ID  reduce 62
	IF  reduce 62
	ELSE  reduce 62
	END_IF  reduce 62
	OUT  reduce 62
	FOR  reduce 62
	INTEGER  reduce 62
	FLOAT  reduce 62
	PROC  reduce 62
	'+'  reduce 62
	'-'  reduce 62
	';'  reduce 62
	')'  reduce 62
	'{'  reduce 62
	'}'  reduce 62


state 99
	termino : termino '*' factor .  (64)

	.  reduce 64


state 100
	termino : termino '/' factor .  (65)

	.  reduce 65


state 101
	condicion : identificador comparador identificador .  (39)
	asignacion : identificador . '=' expresion ';'  (59)

	'='  shift 33
	';'  reduce 39
	')'  reduce 39


state 102
	condicion : identificador comparador asignacion .  (38)

	.  reduce 38


state 103
	condicion : identificador comparador constante .  (40)

	.  reduce 40


state 104
	cuerpoCompleto : '(' condicionIf ')' '{' . bloqueThen '}' ELSE '{' bloqueElse '}'  (48)
	cuerpoCompleto : '(' condicionIf ')' '{' . bloqueThen '}' ELSE senteciaUnicaElse  (50)
	cuerpoIncompleto : '(' condicionIf ')' '{' . bloqueThen '}'  (57)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 118
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 119
	bloqueThen  goto 120


state 105
	senteciaUnicaThen : sentenciaEjecutable .  (52)

	.  reduce 52


state 106
	cuerpoCompleto : '(' condicionIf ')' senteciaUnicaThen . ELSE '{' bloqueElse '}'  (49)
	cuerpoCompleto : '(' condicionIf ')' senteciaUnicaThen . ELSE senteciaUnicaElse  (51)
	cuerpoIncompleto : '(' condicionIf ')' senteciaUnicaThen .  (58)

	ELSE  shift 121
	END_IF  reduce 58


state 107
	sentenciaEjecutable : OUT '(' error ')' ';' .  (26)

	.  reduce 26


state 108
	sentenciaEjecutable : OUT '(' CADENA ')' ';' .  (25)

	.  reduce 25


state 109
	inicioFor : identificador '=' constante .  (37)

	.  reduce 37


state 110
	cicloFor : FOR '(' condicionFor ')' '{' . bloqueSentencia '}'  (34)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 118
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 122


state 111
	condicionFor : inicioFor ';' condiFOR . ';' incDec  (35)

	';'  shift 123
	.  error


state 112
	condiFOR : condicion .  (36)

	.  reduce 36


state 113
	encabezadoProc : PROC identificador '(' ')' NA . '=' CTE ',' NS '=' CTE  (13)

	'='  shift 124
	.  error


state 114
	encabezadoProc : PROC identificador '(' tipo identificador . ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC identificador '(' tipo identificador . ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (15)
	encabezadoProc : PROC identificador '(' tipo identificador . ',' tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (16)
	encabezadoProc : PROC identificador '(' tipo identificador . ',' tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE  (17)

	','  shift 125
	')'  shift 126
	.  error


state 115
	sentenciaEjecutable : identificador '(' error ')' ';' .  (31)

	.  reduce 31


state 116
	sentenciaEjecutable : identificador '(' identificador ',' identificador . ')' ';'  (29)
	sentenciaEjecutable : identificador '(' identificador ',' identificador . ',' identificador ')' ';'  (30)

	','  shift 127
	')'  shift 128
	.  error


state 117
	sentenciaEjecutable : identificador '(' identificador ')' ';' .  (28)

	.  reduce 28


state 118
	bloqueSentencia : sentenciaEjecutable .  (45)

	.  reduce 45


state 119
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (44)
	bloqueThen : bloqueSentencia .  (55)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  reduce 55

	sentenciaEjecutable  goto 129
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 120
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen . '}' ELSE '{' bloqueElse '}'  (48)
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen . '}' ELSE senteciaUnicaElse  (50)
	cuerpoIncompleto : '(' condicionIf ')' '{' bloqueThen . '}'  (57)

	'}'  shift 130
	.  error


state 121
	cuerpoCompleto : '(' condicionIf ')' senteciaUnicaThen ELSE . '{' bloqueElse '}'  (49)
	cuerpoCompleto : '(' condicionIf ')' senteciaUnicaThen ELSE . senteciaUnicaElse  (51)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'{'  shift 131
	.  error

	sentenciaEjecutable  goto 132
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	senteciaUnicaElse  goto 133


state 122
	cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia . '}'  (34)
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (44)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  shift 134
	.  error

	sentenciaEjecutable  goto 129
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 123
	condicionFor : inicioFor ';' condiFOR ';' . incDec  (35)

	error  shift 135
	UP  shift 136
	DOWN  shift 137
	.  error

	incDec  goto 138


state 124
	encabezadoProc : PROC identificador '(' ')' NA '=' . CTE ',' NS '=' CTE  (13)

	CTE  shift 139
	.  error


state 125
	encabezadoProc : PROC identificador '(' tipo identificador ',' . tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (15)
	encabezadoProc : PROC identificador '(' tipo identificador ',' . tipo identificador ',' tipo identificador ')' NA '=' CTE ',' NS '=' CTE  (16)
	encabezadoProc : PROC identificador '(' tipo identificador ',' . tipo identificador ',' tipo identificador error ')' NA '=' CTE ',' NS '=' CTE  (17)

	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 140


state 126
	encabezadoProc : PROC identificador '(' tipo identificador ')' . NA '=' CTE ',' NS '=' CTE  (14)

	NA  shift 141
	.  error


state 127
	sentenciaEjecutable : identificador '(' identificador ',' identificador ',' . identificador ')' ';'  (30)

	ID  shift 2
	.  error

	identificador  goto 142


state 128
	sentenciaEjecutable : identificador '(' identificador ',' identificador ')' . ';'  (29)

	';'  shift 143
	.  error


state 129
	bloqueSentencia : bloqueSentencia sentenciaEjecutable .  (44)

	.  reduce 44


state 130
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' . ELSE '{' bloqueElse '}'  (48)
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' . ELSE senteciaUnicaElse  (50)
	cuerpoIncompleto : '(' condicionIf ')' '{' bloqueThen '}' .  (57)

	ELSE  shift 144
	END_IF  reduce 57


state 131
	cuerpoCompleto : '(' condicionIf ')' senteciaUnicaThen ELSE '{' . bloqueElse '}'  (49)

	error  shift 27
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 118
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 145
	bloqueElse  goto 146


state 132
	senteciaUnicaElse : sentenciaEjecutable .  (53)

	.  reduce 53

